--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f8f8f8;
         }
         header {
-            background-color: #ff4500;
+            background-color: #084eda;
             color: white;
             text-align: center;
             padding: 20px;
